--- a/Assignment2.html
+++ b/Assignment2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Certificate Display</title>
+    <title>Certificate Displays</title>
     <style>
         body {
             font-family: Arial, sans-serif;
